tests/errors/runtime.NotEnoughArguments.1.res
hello
>> Runtime | File: runtime.NotEnoughArguments.1.art
     error | Line: 3
           | 
           | cannot perform print
           | not enough parameters: 1 required